[package]
name = "consalifold"
version = "0.1.13"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "Consensus Secondary Structure Predictor Engaging Structural Alignment-based Error Correction"
repository = "https://github.com/heartsh/consalifold"
readme = "README.md"
keywords = ["bioinformatics", "rna", "secondary-structure"]
license = "MIT"

[dependencies]
num_cpus = "1.0"
crossbeam = "0.8"
consprob = "0.1"

[lib]
path = "src/lib.rs"
name = "consalifold"
